--- a/assets/style_base.scss
+++ b/assets/style_base.scss
@@ -658,6 +658,10 @@ padding-top: 5%;
 		border-radius: 5px;
 		overflow: hidden;
 		box-shadow: 0 2px 10px rgba(0,0,0,.1), 3px 5px 20px rgba(0,0,0,.2);
+		p{
+			line-height: 1.5em;
+			
+		}
 		}
 	  }
 	  
@@ -860,7 +864,7 @@ footer
 
 
 :root {
-	--light: black;
+	--light:black;
 	--dark: #010101;
 	--grey: #334252;
   }
@@ -921,10 +925,12 @@ footer
 	  justify-content: center;
 	  margin-top: 2rem;
 	}
-	&__dot {
+	&__dot 
+	{
+	  margin-top: 160%;
 	  display: block;
-	  width: 1rem;
-	  height: 1rem;
+	  width: 8rem;
+	  height: 2rem;
 	  background: var(--light);
 	  transition: all ease .3s;
 	  cursor: pointer;
