--- a/assets/responsive_mobile.css
+++ b/assets/responsive_mobile.css
@@ -12,16 +12,20 @@
   .container .time1 {
     display: none;
   }
-  #portfolio {
-    height: 190vh;
-    width: 50%;
+  #portfolio 
+  {
+    height: 100vh;
+    width: 70%;
     display: flex;
     flex-direction: column;
+    
   }
-  #portfolio .parent {
+  #portfolio .slider__item , .slider__list
+  {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
   }
   #portfolio .parent div {
     margin-bottom: 5%;
