--- a/assets/responsive_mobile.css
+++ b/assets/responsive_mobile.css
@@ -12,20 +12,16 @@
   .container .time1 {
     display: none;
   }
-  #portfolio 
-  {
-    height: 100vh;
-    width: 70%;
+  #portfolio {
+    height: 190vh;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    
   }
-  #portfolio .slider__item , .slider__list
-  {
+  #portfolio .parent {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
   }
   #portfolio .parent div {
     margin-bottom: 5%;
