--- a/assets/style_base.scss
+++ b/assets/style_base.scss
@@ -29,9 +29,10 @@ $light_text :#0B0909;
 $light_background : #F5F5E9;
 $light_border:#873F49;
   /*------------------Mode----------- light------------*/
-  $dark_background :#040A18;
+  $dark_background :black;
   $dark_text : #D6D6D6;
   $dark_border:#44444C;
+
 
 html
 {
@@ -47,7 +48,77 @@ body
 	overflow: $overflow;
 	margin: 0;
 	background-color: $dark_text;
+
+	.switch {
+		padding: 1px;
+		background-color: $light_text;
+		border-radius: 20px;
+		width: 60px;
+		input
+		 {
+			appearance: none;
+		}
+	}
 }
+/*---------------------------------------------------------------Intro animation texte------------------------------------------------------------------------------*/
+@keyframes apparition
+{
+    100%
+    {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.nom
+{
+    opacity: 0;
+    transform: translateY(-30px);
+    animation: apparition 0.8s 0.2s ease-out forwards;
+}
+.fonction
+{
+    opacity: 0;
+    transform: translateY(-30px);
+    animation: apparition 1s 0.5s ease-out forwards;
+}
+
+	
+	.nav1
+	{
+		opacity: 0;
+        transform: translateY(-30px);
+		animation: apparition 0.9s 0.3s ease-out forwards;
+	}
+	.nav2
+	{
+		opacity: 0;
+        transform: translateY(-30px);
+		animation: apparition 1s 0.4s ease-out forwards;
+	}
+	.nav3
+	{
+		opacity: 0;
+    	transform: translateY(-30px);
+		animation: apparition 1.1s 0.5s ease-out forwards;
+	}
+	.nav4
+	{
+		opacity: 0;
+    	transform: translateY(-30px);
+		animation: apparition 1.2s 0.6s ease-out forwards;
+	}
+	.nav5
+	{
+		opacity: 0;
+    	transform: translateY(-30px);
+		animation: apparition 1.3s 0.7s ease-out forwards;
+	}
+ 
+   
+    
+
+/*Animations////////////////////////////////////////////////////////////////////*/
 .inactive
 {
  display: none;
@@ -389,6 +460,9 @@ padding-top: 5%;
 		height: 100vh;
 	
 	  }
+.contain {
+	float: left;
+}
   
 	 
 /**********************************************COLONNE*****************************************************/
@@ -1005,13 +1079,23 @@ body#dark
 	cursor: url(./cursor_dark.svg),default;
 	-webkit-transition: .4s;
 	transition: .4s;
+
+	.slider__dot{
+		background-color: #873F49;
+	}
 	.about2 ,.about3
 	{
-	 border-left: $dark_border solid 3px;
+	 border-left: $light_border solid 3px;
 	}
 	.switch {
 		padding: 1px;
 		background-color: #873F49;
+		border-radius: 20px;
+		width: 60px;
+		input
+		 {
+			appearance: none;
+		}
 	}
 	#parcours li , #parcours h4 , .titre_parcours{
 		color:$dark_text;
@@ -1033,7 +1117,7 @@ body#dark
 	.python:hover p 
 	{
 	
-		color: $dark_border;
+		color: #873F49;
 		
 	}
   #article0  
@@ -1057,19 +1141,25 @@ body#dark
 	}
 	nav 
 	{
+		
 	
 		a {
 			color: $dark_text;
 			
 			
 		}
-		a:hover
+		li a:hover
 		{
 			border-bottom: $light_border 2px;
 		}
 	
 
 	}
+	footer {
+		background-color: #873F49;
+	}
 
 
   }
+
+
