--- a/assets/responsive_mobile.css
+++ b/assets/responsive_mobile.css
@@ -1,95 +1,1 @@
-@charset "UTF-8";
-@media (max-width: 375px) {
-  .container {
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto; /* Ajoute un scroll vertical si le contenu dépasse la hauteur de l'écran */
-    height: 100vh; /* Définit la hauteur de l'élément parent sur 100% de la hauteur de la vue */
-  }
-  .container .toggle {
-    display: block;
-  }
-  .container .time1 {
-    display: none;
-  }
-  #portfolio {
-    height: 190vh;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-  }
-  #portfolio .parent {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #portfolio .parent div {
-    margin-bottom: 5%;
-  }
-  #article0 {
-    padding-top: 5%;
-  }
-  #article0 .hello, #article0 .hello0, #article0 .hello1, #article0 .hello2, #article0 .hello3 {
-    font-size: 10px;
-  }
-  aside img {
-    padding-top: 0;
-    width: 300px;
-  }
-  aside .hellobis {
-    font-size: 10px;
-  }
-  #nav li a {
-    font-size: 10px;
-  }
-  .nom {
-    font-size: 50px;
-  }
-  .fonction {
-    font-size: 20px;
-  }
-  .titre {
-    font-size: 10px;
-  }
-  #article2 #parcours {
-    display: none;
-  }
-  .cards, .cards2 {
-    margin-left: 10%;
-    margin-left: 10%;
-  }
-  .cards .card-img, .cards2 .card-img {
-    width: 250px;
-    height: 400px;
-    background-image: url(https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a20bc6324f6ef2969d9a7cae56b8d4d1&auto=format&fit=crop&w=1350&q=80);
-    background-position: 0 center;
-    background-size: cover;
-  }
-  .cards h3, .cards2 h3 {
-    font-size: 1em;
-  }
-  .cards h4, .cards2 h4 {
-    font-size: 1em;
-    padding-bottom: 5%;
-  }
-  .cards h5, .cards2 h5 {
-    font-size: 1em;
-    padding-top: 5%;
-  }
-  .cards p, .cards2 p {
-    font-size: 10px;
-  }
-  /******************************************typewriter***********************************************************/
-  /* Animation */
-  .hello, .hello0, .hello1, .hello2, .hello3, .hellobis {
-    white-space: nowrap;
-    overflow: hidden;
-    font-family: "Source Code Pro", monospace;
-    color: black;
-  }
-  .parent div {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-  }
-}/*# sourceMappingURL=responsive_mobile.css.map */
+@media(max-width: 400px){.container{display:flex;flex-direction:column;overflow-y:auto;height:100vh}.container .toggle{display:block}.container .time1{display:none}#portfolio{height:190vh;width:50%;display:flex;flex-direction:column}#portfolio .parent{display:flex;flex-direction:column;align-items:center}#portfolio .parent div{margin-bottom:5%}#article0{padding-top:5%}#article0 .hello,#article0 .hello0,#article0 .hello1,#article0 .hello2,#article0 .hello3{font-size:10px}aside img{padding-top:0;width:300px}aside .hellobis{font-size:10px}#nav li a{font-size:10px}.nom{font-size:50px}.fonction{font-size:20px}.titre{font-size:10px}#article2 #parcours{display:none}.cards,.cards2{margin-left:10%;margin-left:10%}.cards .card-img,.cards2 .card-img{width:250px;height:400px;background-image:url(https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a20bc6324f6ef2969d9a7cae56b8d4d1&auto=format&fit=crop&w=1350&q=80);background-position:0 center;background-size:cover}.cards h3,.cards2 h3{font-size:1em}.cards h4,.cards2 h4{font-size:1em;padding-bottom:5%}.cards h5,.cards2 h5{font-size:1em;padding-top:5%}.cards p,.cards2 p{font-size:10px}.hello,.hello0,.hello1,.hello2,.hello3,.hellobis{white-space:nowrap;overflow:hidden;font-family:"Source Code Pro",monospace;color:#000}.parent div{display:flex;flex-direction:column;width:50%}}
