--- a/assets/responsive_mobile.scss
+++ b/assets/responsive_mobile.scss
@@ -1,5 +1,8 @@
 
-@media  (max-width:375px) {
+@media  (max-width:400px) 
+{
+  
+  
 .container
 {
    display: flex;
@@ -21,6 +24,7 @@
   width: 50%;
   display: flex;
   flex-direction: column;
+ 
 
 
   .parent 
@@ -144,6 +148,7 @@
       width: 50%;
     }
   }
+  
     
   }
     
